.provarCaches/00D410000011HE0EAM/objects/rstk__wccptypln__c.object
<CustomObject>
    <description>wccptypln__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>Id</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__wccptypln_date__c</fullName>
        <inlineHelpText>Beginning Date</inlineHelpText>
        <label>date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__wccptypln_days__c</fullName>
        <inlineHelpText>Number of days to look forward.</inlineHelpText>
        <label>Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wccptypln_div__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Applicable DIvision</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>WC Capacity Planning</relationshipLabel>
        <relationshipName>divwccptyplns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__wccptypln_level_load__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Level Load</label>
        <type>Checkbox</type>
    </fields>
    <label>WC Capacity Planning</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WC Capacity Planning</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>